--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "type": "module",
   "dependencies": {
     "@creativebulma/bulma-tooltip": "^1.2.0",
+    "@sveltejs/adapter-vercel": "^3.1.0",
     "bulma-steps-component": "^0.5.3",
     "bulma-switch": "^2.0.4",
     "bulma-timeline": "^3.0.5",
