--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsforce": "^1.11.1",
     "moment": "^2.29.4",
     "numeral": "^2.0.6",
+    "pdfjs": "^2.5.2",
     "simple-svelte-autocomplete": "^2.5.2",
     "uuidv4": "^6.2.13"
   }
