--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 	"dependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
 		"jsforce": "^1.11.1",
-		"moment": "^2.30.1",
-		"bootstrap-italia": "^2.8.2"
+		"moment": "^2.30.1"
 	}
 }
