--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"jsforce": "^1.11.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
-		"moment": "^2.30.1",
-		"jsforce": "^1.11.1"
+		"moment": "^2.30.1"
 	}
 }
