--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dtdpa2026",
-	"version": "0.0.9",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -20,13 +20,13 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"jsforce": "^1.11.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
-		"jsforce": "^1.11.1"
+		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
