--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ node_modules
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .vercel/
+src/routes/localaccess/+page.server.js
+src/routes/localaccess/+page.svelte
