--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@event-calendar/core": "^2.7.0",
+		"@event-calendar/day-grid": "^2.7.0",
+		"@event-calendar/list": "^2.7.0",
+		"@event-calendar/time-grid": "^2.7.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-vercel": "^5.1.0",
 		"@sveltejs/kit": "^2.0.0",
@@ -32,6 +36,8 @@
 	"dependencies": {
 		"@sveltejs/adapter-node": "^4.0.1",
 		"d3": "^7.9.0",
-		"moment": "^2.30.1"
+		"moment": "^2.30.1",
+		"node-cron": "^3.0.3",
+		"string-similarity-js": "^2.1.4"
 	}
 }
