--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ vite.config.ts.timestamp-*
 .vercel/
 src/routes/localaccess/+page.server.js
 src/routes/localaccess/+page.svelte
+src/routes/monitoraggio/asseverazioniformali/+page.server.js
+src/routes/monitoraggio/asseverazioniformali/+page.svelte
