--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@actions/core": "^1.10.1",
+		"@actions/github": "^6.0.0",
 		"@sveltejs/adapter-node": "^4.0.1",
 		"d3": "^7.9.0",
 		"moment": "^2.30.1",
