--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,94 @@ src/routes/localaccess/+page.server.js
 src/routes/localaccess/+page.svelte
 src/routes/monitoraggio/asseverazioniformali/+page.server.js
 src/routes/monitoraggio/asseverazioniformali/+page.svelte
+scraps/old/+page.server.js
+scraps/old/+page.svelte
+scraps/old/elaborazione_questionari_anci.js
+scraps/old/questorganizzazione.svelte
+scraps/old/questriepilogo.svelte
+scraps/old/questrisorseict.svelte
+scraps/old/responses_grandi.js
+scraps/old/responses_piccoli.js
+scraps/old/ente/temp/[nome]/+page.server.js
+scraps/old/ente/temp/[nome]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/+page.server.js
+scraps/old/ente/temp/[nome]/[id]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/atti.svelte
+scraps/old/ente/temp/[nome]/[id]/cellbarchart.svelte
+scraps/old/ente/temp/[nome]/[id]/cellchart.svelte
+scraps/old/ente/temp/[nome]/[id]/discretebars.svelte
+scraps/old/ente/temp/[nome]/[id]/gauge.svelte
+scraps/old/ente/temp/[nome]/[id]/governance.svelte
+scraps/old/ente/temp/[nome]/[id]/infrastrutturaict.svelte
+scraps/old/ente/temp/[nome]/[id]/organizzazione.svelte
+scraps/old/ente/temp/[nome]/[id]/piechart.svelte
+scraps/old/ente/temp/[nome]/[id]/servizi.svelte
+scraps/old/ente/temp/[nome]/[id]/sezione.svelte
+scraps/old/ente/temp/[nome]/[id]/sicurezza.svelte
+scraps/old/ente/temp/[nome]/[id]/utente.svelte
+scraps/old/ente/temp/[nome]/+page.server.js
+scraps/old/ente/temp/[nome]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/+page.server.js
+scraps/old/ente/temp/[nome]/[id]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/atti.svelte
+scraps/old/ente/temp/[nome]/[id]/cellbarchart.svelte
+scraps/old/ente/temp/[nome]/[id]/cellchart.svelte
+scraps/old/ente/temp/[nome]/[id]/discretebars.svelte
+scraps/old/ente/temp/[nome]/[id]/gauge.svelte
+scraps/old/ente/temp/[nome]/[id]/governance.svelte
+scraps/old/ente/temp/[nome]/[id]/infrastrutturaict.svelte
+scraps/old/ente/temp/[nome]/[id]/organizzazione.svelte
+scraps/old/ente/temp/[nome]/[id]/piechart.svelte
+scraps/old/ente/temp/[nome]/[id]/servizi.svelte
+scraps/old/ente/temp/[nome]/[id]/sezione.svelte
+scraps/old/ente/temp/[nome]/[id]/sicurezza.svelte
+scraps/old/ente/temp/[nome]/[id]/utente.svelte
+scraps/old/ente/temp/[nome]/[id]/+page.server.js
+scraps/old/ente/temp/[nome]/[id]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/atti.svelte
+scraps/old/ente/temp/[nome]/[id]/cellbarchart.svelte
+scraps/old/ente/temp/[nome]/[id]/cellchart.svelte
+scraps/old/ente/temp/[nome]/[id]/discretebars.svelte
+scraps/old/ente/temp/[nome]/[id]/gauge.svelte
+scraps/old/ente/temp/[nome]/[id]/governance.svelte
+scraps/old/ente/temp/[nome]/[id]/infrastrutturaict.svelte
+scraps/old/ente/temp/[nome]/[id]/organizzazione.svelte
+scraps/old/ente/temp/[nome]/[id]/piechart.svelte
+scraps/old/ente/temp/[nome]/[id]/servizi.svelte
+scraps/old/ente/temp/[nome]/[id]/sezione.svelte
+scraps/old/ente/temp/[nome]/[id]/sicurezza.svelte
+scraps/old/ente/temp/[nome]/[id]/utente.svelte
+scraps/old/ente/temp/[nome]/+page.server.js
+scraps/old/ente/temp/[nome]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/+page.server.js
+scraps/old/ente/temp/[nome]/[id]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/atti.svelte
+scraps/old/ente/temp/[nome]/[id]/cellbarchart.svelte
+scraps/old/ente/temp/[nome]/[id]/cellchart.svelte
+scraps/old/ente/temp/[nome]/[id]/discretebars.svelte
+scraps/old/ente/temp/[nome]/[id]/gauge.svelte
+scraps/old/ente/temp/[nome]/[id]/governance.svelte
+scraps/old/ente/temp/[nome]/[id]/infrastrutturaict.svelte
+scraps/old/ente/temp/[nome]/[id]/organizzazione.svelte
+scraps/old/ente/temp/[nome]/[id]/piechart.svelte
+scraps/old/ente/temp/[nome]/[id]/servizi.svelte
+scraps/old/ente/temp/[nome]/[id]/sezione.svelte
+scraps/old/ente/temp/[nome]/[id]/sicurezza.svelte
+scraps/old/ente/temp/[nome]/[id]/utente.svelte
+scraps/old/ente/temp/[nome]/[id]/+page.server.js
+scraps/old/ente/temp/[nome]/[id]/+page.svelte
+scraps/old/ente/temp/[nome]/[id]/atti.svelte
+scraps/old/ente/temp/[nome]/[id]/cellbarchart.svelte
+scraps/old/ente/temp/[nome]/[id]/cellchart.svelte
+scraps/old/ente/temp/[nome]/[id]/discretebars.svelte
+scraps/old/ente/temp/[nome]/[id]/gauge.svelte
+scraps/old/ente/temp/[nome]/[id]/governance.svelte
+scraps/old/ente/temp/[nome]/[id]/infrastrutturaict.svelte
+scraps/old/ente/temp/[nome]/[id]/organizzazione.svelte
+scraps/old/ente/temp/[nome]/[id]/piechart.svelte
+scraps/old/ente/temp/[nome]/[id]/servizi.svelte
+scraps/old/ente/temp/[nome]/[id]/sezione.svelte
+scraps/old/ente/temp/[nome]/[id]/sicurezza.svelte
+scraps/old/ente/temp/[nome]/[id]/utente.svelte
+scraps/old/ente/temp/[nome]/+page.server.js
+scraps/old/ente/temp/[nome]/+page.svelte
