--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@actions/github": "^6.0.0",
 		"@observablehq/plot": "^0.6.16",
 		"@sveltejs/adapter-node": "^4.0.1",
+		"@turf/turf": "^7.1.0",
 		"d3": "^7.9.0",
 		"moment": "^2.30.1",
 		"node-cron": "^3.0.3",
