--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,4 @@ scraps/old/ente/temp/[nome]/[id]/sicurezza.svelte
 scraps/old/ente/temp/[nome]/[id]/utente.svelte
 scraps/old/ente/temp/[nome]/+page.server.js
 scraps/old/ente/temp/[nome]/+page.svelte
+bfg.jar
