--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
 		"@turf/turf": "^7.1.0",
 		"d3": "^7.9.0",
 		"moment": "^2.30.1",
-		"node-cron": "^3.0.3",
-		"string-similarity-js": "^2.1.4",
-		"tippy.js": "^6.3.7"
+		"string-similarity-js": "^2.1.4"
 	}
 }
