--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
 		"@observablehq/plot": "^0.6.16",
 		"@sveltejs/adapter-node": "^4.0.1",
 		"@turf/turf": "^7.1.0",
+		"@viz-js/viz": "^3.11.0",
 		"cross-env": "^7.0.3",
 		"d3": "^7.9.0",
+		"katex": "^0.16.18",
+		"lodash": "^4.17.21",
 		"moment": "^2.30.1",
 		"string-similarity-js": "^2.1.4"
 	}
