--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ scraps/old/ente/temp/[nome]/[id]/utente.svelte
 scraps/old/ente/temp/[nome]/+page.server.js
 scraps/old/ente/temp/[nome]/+page.svelte
 bfg.jar
+localhook.js
